objects/Workplace_Stats__c.object
<CustomObject>
    <fields>
        <fullName>Affiliate_Referrer__c</fullName>
        <label>Affiliate Referrer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_WeWork_Spends_as_a_Vendor__c</fullName>
        <label>Amount WeWork Spends as a Vendor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CEO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Workplace Stats</relationshipLabel>
        <relationshipName>Workplace_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Workplace Stats (CFO)</relationshipLabel>
        <relationshipName>Workplace_Stats1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Workplace Stats (COO)</relationshipLabel>
        <relationshipName>Workplace_Stats2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <description>the no. of countries in which this organization has a location</description>
        <label>Countries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Notes_and_Description__c</fullName>
        <description>These will be general notes and description regarding workplace stats</description>
        <inlineHelpText>These will be general notes and description regarding workplace stats</inlineHelpText>
        <label>General Notes and Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_WeWork_History__c</fullName>
        <label>General WeWork History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Access__c</fullName>
        <label>Global Access</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Head_of_HR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of HR</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Workplace Stats (Head of HR)</relationshipLabel>
        <relationshipName>Workplace_Stats4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Head_of_RE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of RE</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Workplace Stats (Head of RE)</relationshipLabel>
        <relationshipName>Workplace_Stats3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Listed_on_Services_Store__c</fullName>
        <label>Listed on Services Store</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Millenial_Workforce__c</fullName>
        <label>% Millenial Workforce</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Spend__c</fullName>
        <description>Total membership fee paid per month.</description>
        <label>Monthly Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_WeWork_Locations__c</fullName>
        <label>No. of WeWork Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partnerships_in_Creator_Awards__c</fullName>
        <label>Partnerships in Creator Awards</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PxWe__c</fullName>
        <label>PxWe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sponsor_WeWork_Events__c</fullName>
        <label>Sponsor WeWork Events</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Committed_Revenue__c</fullName>
        <label>Total Committed Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Spend__c</fullName>
        <description>Total monthly membership fee</description>
        <inlineHelpText>Total monthly membership fee</inlineHelpText>
        <label>Total Monthly Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_No_of_WeWork_Locations__c</fullName>
        <label>Total No. of WeWork Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_of_WeWork__c</fullName>
        <label>Vendor of WeWork</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WeWork_Desks__c</fullName>
        <label>WeWork Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12_Month_Business_Performance__c</fullName>
        <label>12 Month Business Performance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Employees_WFH__c</fullName>
        <label>% of Employees WFH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Locations_Under_Management__c</fullName>
        <label># of Locations Under Management</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Sqft_Leased__c</fullName>
        <label>% of Sqft Leased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Sqft_Owned__c</fullName>
        <label>% of Sqft Owned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Sqft_Shared_Office__c</fullName>
        <label>% of Sqft Shared Office</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Sqft_Under_Management__c</fullName>
        <label># of Sqft Under Management</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Workplace Stats</label>
    <nameField>
        <label>Workplace Stats Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workplace Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>